--- a/readme
+++ b/readme
@@ -3,4 +3,5 @@ python3 -m venv .venv
 .\.venv\Scripts\Activate.ps1
 pip install -r requirements.txt
 pyinstaller  .\ffplayex.spec
+tar-czvf ffplayex.zip .\dist\
 ```
